:art: Personnalisation de la grille tarifaire : bug + alignement, problème affichage boutique pro div/span For #146

--- a/framework/util/asset/css/lime.css
+++ b/framework/util/asset/css/lime.css
@@ -916,6 +916,10 @@ table th,
 	white-space: nowrap;
 }
 
+.td-vertical-align-top {
+	vertical-align: top;
+}
+
 tr:not(:last-child):has(> .td-border) .td-border {
 	border-bottom: 1px dashed var(--border);
 }
